fix link colors in dark mode

--- a/scss/theme.css
+++ b/scss/theme.css
@@ -22,7 +22,7 @@ h6 {
   @apply font-normal text-gray-900 dark:text-gray-200;
 }
 a {
-  @apply no-underline bg-transparent;
+  @apply no-underline bg-transparent dark:text-blue-300 dark:visited:text-purple-300;
 }
 
 a:hover {
